edited index file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
         <title>Hair Parra</title> <!--Page's title, can change later? -->
     </head>
-
+	
+    <!--COMMENT-->
     <!--BODY -->
     <body>
         <!--header start--> 
