--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <!--COMMENT-->
     <!--BODY -->
     <body>
-        <!--header start--> 
+        <!-- header start -->
         <div id="header" class="section">
-            <!--Inert an image in here later-->
+            <img alt="" class="img-circle" src="https://code.sololearn.com/Icons/Avatars/0.jpg">
+            <p>Hair Albeiro Parra Barrera</p>
         </div>
-        <p>Hair Albeiro Parra Barrera</p> <!--actual display title--> 
-        <!--header end--> 
+        <!-- header end -->
 
         <!--ABout me section starts--> 
         <div class="section"> 
@@ -37,6 +37,11 @@
                 I also have knowledge of Java (OOP), C and elementary C++, HTML and CSS. 
             </p> 
             <p class="quote">Declare variables, not war.</p>
+        </div>
+
+        <!--Copyright-->
+        <div class="copyright">
+            &copy; 2019 Hair Albeiro Parra Barrera. All rights reserved.
         </div>
 
     </body>
