--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
         <!--Title customization-->
-        <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet"> 
+        <link rel="stylesheet" href="styles.css"> <!--Use custom css style-->
         <title>Hair Parra</title> <!--Page's title, can change later? -->
     </head>
 	
@@ -19,8 +20,10 @@
     <body>
         <!-- header start -->
         <div id="header" class="section">
-            <img alt="" class="img-circle" src="https://code.sololearn.com/Icons/Avatars/0.jpg">
-            <p>Hair Albeiro Parra Barrera</p>
+            <center> 
+                <img src="img/profile_centre_du_commerce.jpg" alt="Centre du commerce" class="img-circle" style="width:500px;height:500px;">
+            </center>
+            <center><p>Hair Albeiro Parra Barrera</p></center>
         </div>
         <!-- header end -->
 
