added a bit of css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!--Title customization-->
         <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet"> 
-        <link rel="stylesheet" href="styles.css"> <!--Use custom css style-->
+        <link rel="stylesheet" type="text/css" href="styles.css"> <!--Use custom css style-->
         <title>Hair Parra</title> <!--Page's title, can change later? -->
     </head>
 	
@@ -20,7 +20,7 @@
         <!-- header start -->
         <div id="header" class="section">
             <center> 
-                <img src="img/profile_centre_du_commerce.jpg" alt="Centre du commerce" class="img-circle" style="width:500px;height:500px;">
+                <img src="img/profile_centre_du_commerce.jpg" alt="Centre du commerce" class="circular--square" style="width:500px;height:500px;">
             </center>
             <center><p>Hair Albeiro Parra Barrera</p></center>
         </div>
