--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
 	
     <!--BODY -->
-    <body>
+    <body class="body">
         <!-- header start -->
         <div id="header" class="section">
             <center> 
