--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <center> 
                 <img src="img/profile_centre_du_commerce.jpg" alt="Centre du commerce" class="circular--square" style="width:500px;height:500px;">
             </center>
-            <center><p>Hair Albeiro Parra Barrera</p></center>
+            <center><p><h1>Hair Albeiro Parra Barrera</h1></p></center>
         </div>
         <!-- header end -->
 
