updated index and css style

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <!-- header end -->
 
-        <!--ABout me section starts--> 
+        <!--About me section starts--> 
         <div class="section"> 
-            <h!><span>About Me</span></h> 
+            <h2><span>About Me</span></h2> 
             <p> 
 
                 <!--Main content description--> 
@@ -36,6 +36,48 @@
             </p> 
             <p class="quote">Declare variables, not war.</p>
         </div>
+        <!--About me section starts-->
+
+        <!-- My Skills section start -->
+        <div align="center" class="section" >
+            <h1><span>My Skills</span></h1>
+            <ul class="nobull"> <!--Unordered list tag?-->
+                <li>Python <br />
+                    <progress min="0" max="100" value="80" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>R <br />
+                    <progress min="0" max="100" value="80" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>SQL <br />
+                    <progress min="0" max="100" value="60" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>Bash <br />
+                    <progress min="0" max="100" value="50" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>Git <br />
+                    <progress min="0" max="100" value="50" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>Latex <br />
+                    <progress min="0" max="100" value="80" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>Java <br />
+                    <progress min="0" max="100" value="65" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>C <br />
+                    <progress min="0" max="100" value="50" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>C++ <br />
+                    <progress min="0" max="100" value="40" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>HTML & CSS <br />
+                    <progress min="0" max="100" value="30" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+                <li>JavaScript <br />
+                    <progress min="0" max="100" value="20" style="width:500px;height:20px;object-fit:cover;"></progress>
+                </li>
+            </ul>
+        </div>
+        <!-- My Skills section end -->
 
         <!--Copyright-->
         <div class="copyright">
