--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
     <!--TITLE-->
     <head> 
@@ -52,10 +52,10 @@
                     <progress min="0" max="100" value="60" style="width:50%;height:20px;object-fit:cover;"></progress>
                 </li>
                 <li>Bash <br />
-                    <progress min="0" max="100" value="50" style="width:50%;height:20px;object-fit:cover;"></progress>
+                    <progress min="0" max="100" value="60" style="width:50%;height:20px;object-fit:cover;"></progress>
                 </li>
                 <li>Git <br />
-                    <progress min="0" max="100" value="50" style="width:50%;height:20px;object-fit:cover;"></progress>
+                    <progress min="0" max="100" value="60" style="width:50%;height:20px;object-fit:cover;"></progress>
                 </li>
                 <li>Latex <br />
                     <progress min="0" max="100" value="80" style="width:50%;height:20px;object-fit:cover;"></progress>
@@ -67,7 +67,7 @@
                     <progress min="0" max="100" value="50" style="width:50%;height:20px;object-fit:cover;"></progress>
                 </li>
                 <li>C++ <br />
-                    <progress min="0" max="100" value="40" style="width:50%;height:20px;object-fit:cover;"></progress>
+                    <progress min="0" max="100" value="35" style="width:50%;height:20px;object-fit:cover;"></progress>
                 </li>
                 <li>HTML & CSS <br />
                     <progress min="0" max="100" value="30" style="width:50%;height:20px;object-fit:cover;"></progress>
@@ -78,6 +78,19 @@
             </ul>
         </div>
         <!-- My Skills section end -->
+
+        <!--?????-->
+        <div align="center" class="section"> 
+            <b>If you feel sad, press this button: 
+                <a href="http://www.davetech.co.uk/chihuahuaormuffin" >
+                    <input type="button" value="PRESS ME!"> </b> </b> <br/>
+                </a>
+    
+                <h4>Can you guess whether it is a chihuahua or a muffin?</h4>
+                <img src="https://cdn-images-1.medium.com/max/1096/1*bt-E2YcPafjiPbZFDMMmNQ.jpeg">
+        </div>
+        <!--?????-->
+
 
         <!-- Form section start -->
         <div align="center" class="section">
@@ -126,7 +139,7 @@
         <div class="copyright">
             &copy; 2019 Hair Albeiro Parra Barrera. All rights reserved.
         </div>
-        <!--End copyright-->
+        <!--End copyright--> 
 
     </body>
 
