adjusted for cellphone display

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         <input type="button" value="PRESS ME!"> </b> </b> <br/>
                                     </a>
                                 <h4>Can you guess whether it is a chihuahua or a muffin?</h4> <br/> <br/>
-                                <img src="https://cdn-images-1.medium.com/max/1096/1*bt-E2YcPafjiPbZFDMMmNQ.jpeg">
+                                <img src="https://cdn-images-1.medium.com/max/1096/1*bt-E2YcPafjiPbZFDMMmNQ.jpeg" style="height: 50%; width: 50%;">
                             </div>
                             <!--?????-->
 
@@ -130,7 +130,7 @@
 
 
                             <!-- Contacts section start -->
-                            <div align="center" class="section" id="contacts">
+                            <div class="section" id="contacts">
                                 <h1><span><i>Follow Me</i></span></h1>
                                 <div>
                                     <a href="https://www.sololearn.com/Profile/7256409" target="_blank">
@@ -149,7 +149,7 @@
                             </div>
                             <!-- Contacts section end -->
 
-                            s<!--Copyright-->
+                            <!--Copyright-->
                             <div class="copyright">
                                 &copy; 2019 Hair Albeiro Parra Barrera. All rights reserved.
                             </div>
