--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                             <!--?????-->
                             <div class="section"> 
-                                <h2><span>Muffin or Chihuahua? </span></h2>
+                                <h2><span>MUFFIN OR CHIHUAHUA </span></h2>
                                 <br/> 
                                 <b>If you feel sad, press this button: 
                                     <a href="http://www.davetech.co.uk/chihuahuaormuffin" >
