--- a/index.html
+++ b/index.html
@@ -90,17 +90,73 @@
                             </div>
                             <!-- My Skills section end -->
 
+
+                            <!--Relevant Coursework section starts-->
                             <div class="section">
                                 <h1><span>Relevant Coursework</span></h1> <br/> 
+
+                                <!--Computer Science coursework-->
+                                <h2 style="text-align: left;"><span>Computer Science</span></h2> <br/>
+
+                                <ol style="text-align: left;">
+                                    <li> <span style="color:lightgray;"><i>COMP202: Foundations of Programming (3 credits)</i></span> <br/>
+                                        Introduction to computer programming in a high level language: variables, expressions, primitive types, 
+                                        methods, conditionals, loops. Introduction to algorithms, data structures (arrays, strings), modular software design, 
+                                        libraries, file input/output, debugging, exception handling.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 206 Introduction to Software Systems (3 credits)</i></span> <br/>
+                                        Comprehensive overview of programming in C, use of system calls and libraries, debugging and testing of code; 
+                                        use of developmental tools like make, version control systems.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 250 Introduction to Computer Science (3 credits)</i></span> <br/>
+                                        Mathematical tools (binary numbers, induction, recurrence relations, asymptotic complexity, establishing correctness of programs),
+                                            Data structures (arrays, stacks, queues, linked lists, trees, binary trees, binary search trees, heaps, hash tables), 
+                                            Recursive and non-recursive algorithms (searching and sorting, tree and graph traversal). Abstract data types, inheritance. Selected topics.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 251 Algorithms and Data Structures (3 credits)</i></span> <br/>
+                                        Introduction to algorithm design and analysis. Graph algorithms, greedy algorithms, data structures, dynamic programming, maximum flows.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 273 Introduction to Computer Systems (3 credits)</i></span> <br/>
+                                        Number representations, combinational and sequential digital circuits, MIPS instructions and architecture datapath and control,
+                                            caches, virtual memory, interrupts and exceptions, pipelining.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 302 Programming Languages and Paradigms (3 credits)</i></span> <br/>
+                                        Programming language design issues and programming paradigms. Binding and scoping, 
+                                        parameter passing, lambda abstraction, data abstraction, type checking. Functional and logic programming.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 330 Theory of Computation (3 credits)</i></span> <br/>
+                                        Finite automata, regular languages, context-free languages, push-down automata, models of computation, 
+                                        computability theory, undecidability, reduction techniques.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 421 Database Systems (3 credits)</i></span> <br/>
+                                        Computer Science (Sci) : Database Design: conceptual design of databases (e.g., entity-relationship model), 
+                                        relational data model, functional dependencies. Database Manipulation: relational algebra, SQL, database application programming, triggers, 
+                                        access control. Database Implementation: transactions, concurrency control, recovery, query execution and query optimization.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 550 Natural Language Processing (3 credits)</i></span> <br/>
+                                        An introduction to the computational modelling of natural language, including algorithms, formalisms, and applications.
+                                            Computational morphology, language modelling, syntactic parsing, lexical and compositional semantics, and discourse analysis.
+                                            Selected applications such as automatic summarization, machine translation, and speech processing. 
+                                            Machine learning techniques for natural language processing.
+                                    </li>
+                                    <li> <span style="color:lightgray;"><i>COMP 551 Applied Machine Learning (4 credits)</i></span> <br/>
+                                        Selected topics in machine learning and data mining, including clustering, neural networks, support vector machines, 
+                                        decision trees. Methods include feature selection and dimensionality reduction, error estimation and empirical validation, 
+                                        algorithm design and parallelization, and handling of large data sets. 
+                                        Emphasis on good methods and practices for deployment of real systems.
+                                    </li>
+
+                                </ol> 
                             </div>
                             <!--Relevant Coursework section ends-->
 
 
 
 
+
                             <!--?????-->
                             <div class="section"> 
-                                <h2><span>MUFFIN OR CHIHUAHUA </span></h2>
+                                <h2><span>Muffin or chihuahua </span></h2>
                                 <br/> 
                                 <b>If you feel sad, press this button: 
                                     <a href="http://www.davetech.co.uk/chihuahuaormuffin" >
