--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                             </div>
                             <!--About me section ends-->
 
+                            <!--DUMMY COMMENT-->
+
                             <!-- My Skills section start -->
                             <div class="section" >
                                 <h1><span>My Skills</span></h1>
