--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                             </div>
                             <!--About me section ends-->
 
-                            <!--DUMMY COMMENT-->
 
                             <!-- My Skills section start -->
                             <div class="section" >
@@ -61,7 +60,7 @@
                                     <li>R <br />
                                         <progress min="0" max="100" value="80" style="width:50%;height:20px;object-fit:cover;"></progress>
                                     </li>
-                                    <li>SQL <br />
+                                    <li>SQL <br />  
                                         <progress min="0" max="100" value="60" style="width:50%;height:20px;object-fit:cover;"></progress>
                                     </li>
                                     <li>Bash <br />
@@ -158,7 +157,7 @@
 
                             <!--?????-->
                             <div class="section"> 
-                                <h2><span>Muffin or chihuahua </span></h2>
+                                <h2><span>Muffin or chihuahua??</span></h2>
                                 <br/> 
                                 <b>If you feel sad, press this button: 
                                     <a href="http://www.davetech.co.uk/chihuahuaormuffin" >
