added email link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                             <!--About me section ends-->
 
 
+
                             <!-- My Skills section start -->
                             <div class="section" >
                                 <h1><span>My Skills</span></h1>
@@ -204,7 +205,10 @@
                                     </a>
                                     <a href="https://www.datacamp.com/profile/jairparra" target="_blank">
                                         <img alt="Datacamp" class="icon" src="img/data_camp_logo.png" >
-                                    </a>
+                                    </a> 
+                                    <a href="mailto: jair.parra@outlook.com">
+                                        <img alt="email" class="icon" src="img/email_icon.png">
+                                    <a/>
                                 </div>
                             </div>
                             <!-- Contacts section end -->
@@ -219,6 +223,7 @@
                 </div>
             </div>
         </div> 
+
 
         
     </body>
