--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                             <!-- My Skills section start -->
                             <div class="section" >
-                                <h1><span>My Skills</span></h1>
+                                <h1><span>My Skills</span></h1> <br/>
                                 <ul class="nobull"> <!--Unordered list tag?-->
                                     <li>Python <br />
                                         <progress min="0" max="100" value="80" style="width:50%;height:20px;object-fit:cover;"></progress>
@@ -102,7 +102,7 @@
                                             <ul style="text-align: left;">
                                                 <h2 style="text-align: left"><span>Computer Science</span></h2>  <br/>
                                             </ul>
-                                            
+
                                             <ol style="text-align: left;">
                                                 <li> <span style="color:lightgray;"><i>COMP202: Foundations of Programming (3 credits)</i></span> <br/>
                                                     Introduction to computer programming in a high level language: variables, expressions, primitive types, 
@@ -210,8 +210,17 @@
                                 </table> 
 
                             </div>
-
                             <!--Relevant Coursework section ends (table)--> 
+
+                            <!--Blog section starts--> 
+                            <div class="section"> 
+                                <a href="https://blog.jairparraml.com" target="_blank">
+                                    <h1><span>Check out my Portfolio-Blog! </span></h1> <br/>
+                                </a>
+                                <iframe src="https://blog.jairparraml.com/" style="width: 100%; height: 500px;"></iframe>
+
+                            </div>
+                            <!--Blog section ends-->
 
 
 
