--- a/index.html
+++ b/index.html
@@ -19,15 +19,12 @@
             <div class="twinkling">
                 <div class="clouds">
 
-
-                    
                             <!-- header start -->
                             <div id="header" class="header">
                                 <center> 
-                                    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-                                    <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="fr_FR" data-type="horizontal" data-theme="dark" data-vanity="hair-parra-526ba19b"><a class="LI-simple-link" href='https://ca.linkedin.com/in/hair-parra-526ba19b?trk=profile-badge'>Hair Parra</a></div>
+                                    <img src="img/profile_centre_du_commerce.jpg" alt="Centre du commerce" class="circular--square" style="width:30%;height:30%;">
                                 </center>
-                            </div>                    
+                            </div>         
                             
                             <!--Main title-->
                             <div class="header"> 
