--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <!--Title customization-->
         <link rel="stylesheet" type="text/css" href="styles.css"> <!--Use custom css style-->
         <title>Hair Parra</title> <!--Page's title, can change later? -->
+        
+        <!--Scripts--> 
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </head>
 
     <!--BODY -->
@@ -188,7 +191,6 @@
                                 
                             </div>
                             <!-- Form section end -->
-
 
                             <!-- Contacts section start -->
                             <div class="section" id="contacts">
